recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^