recursion.logo.square.FourSquare.scala.code
override def run() {
  
  var i =3;
  
  while(i>=0){
    var j=3
    while(j>0){
      avance(100:Double)
      droite(90:Double)
       j=j-1;
    }
    droite()
    
   i=i-1;
  }

  
 
}